# zkhydra

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  TODO.md  config.toml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  questions.md  run.py  setup.sh
zksec/: README.md  config.py  config.toml  input-bugs.txt  input-tools.txt  logger.py  main.py  pyproject.toml  runner.py  setup.sh  tools_resolver.py
zksec/bugs/: zkbugs.py
zksec/output/: bug_info_ground_truth.json  results.json  tool_output_parsed.json
zksec/output.bak/: bug_info_ground_truth.json  results.json  tool_output_parsed.json
zksec/output.bak2/circom/: results.json  tool_output_parsed.json
zksec/output.bak2/circom/raw/: circomspect.json  picus.json  zkfuzz.json
zksec/output/circom/: bug_info_raw.json  bug_info_structured.json
zksec/output/circom/raw/: circom_civer.json  ecneproject.json
zksec/output/testrun-1/circom/circom_civer/0xbok/circom-bigint/veridise_missing_range_checks_in_bigmod/: raw.txt
zksec/output/testrun-1/circom/circom_civer/darkforest-eth/darkforest-v0.3/daira_hopwood_darkforest_v0_3_missing_bit_length_check/: parsed.json
zksec/output/testrun-1/circom/circom_civer/iden3/circomlib/kobi_gurkan_mimc_hash_assigned_but_not_constrained/: raw.txt
zksec/output/testrun-1/circom/circom_civer/iden3/circomlib/veridise_decoder_accepting_bogus_output_signal/: results.json
zksec/output/testrun-1/circom/circom_civer/iden3/circomlib/veridise_underconstrained_outputs_in_window4/: results.json
zksec/output/testrun-1/circom/circom_civer/iden3/circomlib/veridise_underconstrained_outputs_in_windowmulfix/: results.json
zksec/output/testrun-1/circom/circom_civer/iden3/circomlib/veridise_underconstrained_points_in_edwards2Montgomery/: parsed.json  raw.txt
zksec/output/testrun-1/circom/circom_civer/iden3/circomlib/veridise_underconstrained_points_in_montgomery2Edwards/: parsed.json
zksec/output/zksec/: summary.json
zksec/setup/circom/: circom.sh  circom_civer.sh  circomspect.sh
zksec/setup/pil/: pilspector.sh
zksec/tools/: circom_civer.py  circomspect.py  coda.py  ecneproject.py  garden.py  picus.py  r1cs_solver.py  snarkprobe.py  utils.py  zkap.py  zkfuzz.py
zksec/tools/cairo/: sierra-analyzer.py
zksec/tools/circom/: circom_civer.py  circomspect.py  ecneproject.py  picus.py  zkfuzz.py
zksec/utils/: config.py  logger.py  runner.py  tools_resolver.py
(+573 files in other folders)
