[project]
name = "zkhydra"
version = "0.1.0"
description = "Run ZK circuit security tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.8.0",
    "cython>=3.1.3",
    "eth-typing>=5.2.1",
    "eth-utils>=5.3.1",
    "gmp>=0.0.17",
    "isort>=5.13.2",
    "libpgm>=1.3",
    "mypy-extensions>=1.1.0",
    "numpy>=1.24.0,<2.0.0",
    "py-ecc>=8.0.0",
    "scipy>=1.11.0",
    "z3-solver>=4.15.3.0",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["zkhydra"]
