[project]
name = "zkhydra"
version = "0.1.0"
description = "Run ZK circuit security tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "ruff>=0.8.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["zkhydra"]

[tool.black]
line-length = 80
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | tools
  | bugs
  | output
)/
'''

[tool.isort]
profile = "black"
line_length = 80
skip_glob = ["tools/*", "bugs/*", "output/*", ".venv/*"]

[tool.ruff]
line-length = 80
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "tools",
    "bugs",
    "output",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from exception
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py files
