[project]
name = "zksec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.1.3",
    "eth-typing>=5.2.1",
    "eth-utils>=5.3.1",
    "gmp>=0.0.17",
    "isort>=6.0.1",
    "libpgm>=1.3",
    "mypy-extensions>=1.1.0",
    "numpy>=2.3.2",
    "py-ecc>=8.0.0",
    "scipy>=1.16.1",
    "z3-solver>=4.15.3.0",
]
